# open-rodin

./: .gitignore  README.md  pyproject.toml
open-rodin/configs/model/: unet.yaml
open-rodin/models/: base_model.py  unet.py
open-rodin/utils/: blocks.py  fp16_util.py  misc.py
scripts/: download_synthesisai_face.sh  download_synthesisai_gestures.sh
